refactor(tests): Replace try/catch by assertThatThrownBy
Refactor tests that check for exceptions to have only a single call in the calling code that could throw a RuntimeException.

Refactor to use `assertThatThrownBy()`` for checking code for exceptions thrown.

Fix copy/paste error in testProcessTaskClaimTaskWithTaskWorkPermissionOnAnyTask

related to #88, #27